fix carousel bug2

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
   <section class="strong" id="education">
     <img class="liney" src="./assets/linex.png" />
     <h2 class="heading">Pontos <span>Fortes</span></h2>
+    <div class="drag-image-hidden">
+      <img src="./assets/drag.png" style="background-color: white; padding: 10px; border-radius: 50%;"/>
+      <p>Arraste para o lado</p>
+    </div>
     <div class="strong-content">
       <div class="slider-container">
         <div class="slider-box mySwiper">
@@ -282,6 +286,10 @@
   <section class="portfolio" id="portfolio">
     <div class="portfolio-header">
       <h2 class="heading">Meu <span style="color: black;">Portfolio</span></h2>
+      <div class="drag-image-hidden">
+        <img src="./assets/drag.png" />
+        <p>Arraste para o lado</p>
+      </div>
     </div>
 
     <div class="slider-container-portfolio">
